--- a/ebay.css
+++ b/ebay.css
@@ -1,6 +1,5 @@
 body{
   border: 8px solid black;
-  background-color: red;
 }
 
 logo{
@@ -29,7 +28,7 @@ li a {
 }
 
 li a:hover {
-  background-color: #111;
+  background-color: white;
 }
 
 footer{
