--- a/ebay.css
+++ b/ebay.css
@@ -1,8 +1,4 @@
-body{
-  border: 8px solid black;
-}
-
-logo{
+.logo h1{
   text-align: center;
 }
 
@@ -11,7 +7,7 @@ ul {
   margin: 0;
   padding: 0;
   overflow: hidden;
-  background-color: blue;
+  background-color: #333;
 }
 
 li {
@@ -21,14 +17,14 @@ li {
 
 li a {
   display: block;
-  color: black;
+  color: white;
   text-align: center;
   padding: 14px 16px;
   text-decoration: none;
 }
 
 li a:hover {
-  background-color: white;
+  background-color: #111;
 }
 
 footer{
